websocket 예제 추가

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -45,7 +45,10 @@
             </form>
         </div>
     </div>
-
+<!--
+SockJS : Native WebSocket을 사용하려고하는 WebSocket Client이며 WebSocket을 지원하지 않는 구형 브라우저에 대체 옵션을 제공
+STOMP JS : 자바 스크립트의 STOMP Client
+-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.1.4/sockjs.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
     <script src="/js/main.js"></script>
